<resources>
    <string name="app_name">Journal</string>
    <string name="title_activity_news">News</string>

    <string name="download">Download</string>

    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="weather">Weather</string>
    
    <string name="prefCatNotifications">Notifications</string>
    <string name="prefNotificationsTitle">Activate notifications</string>
    <string name="prefNotificationActiveKey">notification_active</string>
    <string name="prefNotificationSelectedHoursKey">notification_hours</string>
    <string name="prefNotificationAllHoursKey">notification_all_hours</string>

    <string name="prefCatOther">Other</string>
    <string name="prefHideEmptyCatKey">empty_cat_active</string>
    <string name="prefHideEmptyCatTitle">Hide empty categories</string>

    <string name="actionSettings">Settings</string>
    <string name="actionEditCategories">Edit Categories</string>
    <string name="actionAddCategory">Add Category</string>

    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer Close</string>

    <string name="explore">Explore</string>
    <string name="share">Share</string>

    <string name="addCategory">Add new category</string>
    <string name="addCategoryDialogMessage">Enter a title for the new category</string>
    <string name="addNewsFeed">Add new news feed</string>
    <string name="addNewsFeedLabelEditText">Label</string>
    <string name="addNewsFeedLinkEditText">Link</string>
    <string name="add">Add</string>

    <string name="facebook_app_id">185863238451126</string>
    <string name="fb_share_photo">Photo</string>
    <string name="fb_share_video">Video</string>
    <string name="fb_share_link">Link</string>
    <string name="fb_user_feed">Feed</string>
    <string name="fb_user_likes_page">Likes</string>
    <string name="fb_user_info">About</string>
    <string name="fb_page_feed">Feed</string>
    <string name="fb_page_info">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
