<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="catNotifications"
        android:title="@string/prefCatNotifications">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefNotificationActiveKey"
            android:title="@string/prefNotificationsTitle"/>

        <fr.upem.journal.preference.NotificationHoursPreference
            android:key="@string/prefNotificationSelectedHoursKey"
            android:title="Notification hours"
            android:defaultValue="@array/empty_array" />
            <!--android:entries="@array/notificationHoursEntries"
            android:entryValues="@array/notificationHoursValues"-->

        <fr.upem.journal.preference.TimePreference
            android:key="time_picker"
            android:title="Add a notification hour"
            android:defaultValue="8:00" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="catOther"
        android:title="@string/prefCatOther">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefHideEmptyCatKey"
            android:title="@string/prefHideEmptyCatTitle"/>
    </PreferenceCategory>

</PreferenceScreen>